# diablo_project_odin

./: .gitignore  .gitmodules  libceres1_1.14.0-4ubuntu1_amd64.deb  myread.md  readme_cn.md
.history/: .gitignore_20260418173648  .gitignore_20260418173746  .gitignore_20260418173822  .gitignore_20260420144819  readme_cn_20260412144025.md
diablo_neupan_model/: model_0.pth  model_1000.pth  model_1500.pth  model_3500.pth  model_4000.pth  model_500.pth  model_5000.pth  train_dict.pkl
image/: cam_in_ex.txt
src/: build.sh
src/diablo_perception/FASTLIO2_ROS2/fastlio2/: CMakeLists.txt
src/diablo_perception/FASTLIO2_ROS2/hba/: CMakeLists.txt
src/diablo_perception/FASTLIO2_ROS2/localizer/: CMakeLists.txt
src/diablo_perception/loam_interface/launch/: loam_interface_launch.py
src/diablo_perception/loam_interface/src/: loam_interface.cpp
src/diablo_perception/odin_ros_driver/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  package_ros1.xml  set_param.sh
src/diablo_perception/odin_ros_driver/config/: control_command.yaml  odin_ros.rviz  odin_ros2.rviz
src/diablo_perception/odin_ros_driver/include/: camera_pose_visualization.h  cloud_reprojection_ros_node.hpp  cloud_reprojector.hpp  data_logger.h  depth_image_ros2_node.hpp  depth_image_ros_node.hpp  host_sdk_sample.h  image_overlay_node.hpp  lidar_api.h  pointcloud_depth_converter.hpp  polynomial_camera.hpp  rawCloudRender.h  yaml_parser.h
src/diablo_perception/odin_ros_driver/launch_ROS1/: odin1_ros1.launch
src/diablo_perception/odin_ros_driver/launch_ROS2/: odin1_ros2.launch.py
src/diablo_perception/odin_ros_driver/odin_map/pcd/: diablo_stand_office.pcd  officemap.pcd  test1_map.pcd
src/diablo_perception/odin_ros_driver/script/: build_ros.sh  build_ros2.sh  map_recording_ros2.sh
src/diablo_perception/odin_ros_driver/src/: camera_pose_visualization.cpp  cloud_reprojection_ros.cpp  cloud_reprojector.cpp  depth_image_ros2_node.cpp  depth_image_ros_node.cpp  host_sdk_sample.cpp  image_overlay_node.cpp  pcd2depth_ros.cpp  pcd2depth_ros2.cpp  pcd2pgm_ros2_node.cpp  pointcloud_depth_converter.cpp  pointcloud_saver_ros2_node.cpp  rawCloudRender.cpp  yaml_parser.cpp
src/diablo_perception/pb_nav2_plugins/: CMakeLists.txt  README.md  behavior_plugin.xml  package.xml
src/diablo_perception/pcd2grid/: CMakeLists.txt  package.xml
src/diablo_perception/pcd2grid/include/pcd2grid/: pcd2gridmap.hpp  pointcloud2gridmap.hpp
src/diablo_perception/pcd2grid/launch/: pcd2gridmap.launch  piontcloud2gridmap.launch
src/diablo_perception/pcd2grid/src/: pcd2gridmap.cpp  pointcloud2gridmap.cpp  test.cpp
src/diablo_perception/point_lio_ros2/: README.md
src/diablo_perception/point_lio_ros2/src/: laserMapping.cpp
src/diablo_perception/sensor_scan_generation/src/: sensor_scan_generation.cpp
src/diablo_perception/terrain_analysis/src/: terrainAnalysis.cpp
src/diablo_perception/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/diablo_ros2/: .gitignore  .gitmodules  README.md
src/diablo_ros2/diablo_basic/: README.md
src/diablo_ros2/diablo_bringup/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_bringup/config/: diablo_ekf.yaml
src/diablo_ros2/diablo_bringup/diablo_bringup/: create_udev_rules.sh  delete_udev_rules.sh  diablo.rules  led.rules  teleop.py  teleop_stand.py  ui_tools.py  ui_tools_preview.py
src/diablo_ros2/diablo_bringup/launch/: diablo_bringup.launch.py  diablo_bringup_odin.launch.py  (+3 more)
src/diablo_ros2/diablo_convert/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_description/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_led/: package.xml  setup.cfg  setup.py
src/diablo_ros2/diablo_mqtt/: package.xml  setup.cfg  setup.py
src/diablo_ros2/diablo_navigation2/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_neupan/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_neupan/NeuPAN/: README.md  pyproject.toml  requirements.txt
src/diablo_ros2/diablo_neupan/NeuPAN/example/dune_train/: dune_train_diff.yaml
src/diablo_ros2/diablo_neupan/NeuPAN/example/dune_train/model/diablo/: model_2000.pth  model_2500.pth  model_3000.pth  model_4500.pth  results.txt
src/diablo_ros2/diablo_neupan/NeuPAN/example/dune_train/model/go2/: model_5000.pth  results.txt  train_dict.pkl
src/diablo_ros2/diablo_neupan/NeuPAN/neupan/: neupan.py
src/diablo_ros2/diablo_neupan/NeuPAN/neupan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diablo_ros2/diablo_neupan/NeuPAN/neupan/blocks/: dune.py  dune_train.py  initial_path.py  nrmp.py
src/diablo_ros2/diablo_neupan/NeuPAN/neupan/robot/: robot.py
src/diablo_ros2/diablo_neupan/NeuPAN/neupan/ros/: neupan_ros.py
src/diablo_ros2/diablo_neupan/NeuPAN/neupan/ros/configs/: config.yaml  planner.yaml
src/diablo_ros2/diablo_neupan/NeuPAN/neupan/util/: __init__.py
src/diablo_ros2/diablo_neupan/config/: neupan_config.yaml  planner.yaml
src/diablo_ros2/diablo_neupan/diablo_neupan/: __init__.py  neupan_ros2.py
src/diablo_ros2/diablo_neupan/launch/: diablo_neupan.launch.py
src/diablo_ros2/diablo_odin_mapplanner/: CMakeLists.txt  package.xml  readme.md
src/diablo_ros2/diablo_odin_mapplanner/include/diablo_odin_mapplanner/: goal_state_machine.hpp  map_planner.hpp
src/diablo_ros2/diablo_odin_mapplanner/launch/: whole.launch.py
src/diablo_ros2/diablo_odin_mapplanner/maps/: README.md  diablo_stand_office.pgm  diablo_stand_office.yaml  officemap.pgm  officemap.yaml
src/diablo_ros2/diablo_odin_mapplanner/src/: goal_state_machine.cpp  map_planner.cpp
src/diablo_ros2/diablo_odom/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_rviz/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_slam/: CMakeLists.txt  package.xml
src/diablo_ros2/diablo_visualise/: README.md
src/utilities/: build.sh
src/utilities/livox_ros_driver2/: CMakeLists.txt
src/utilities/nav2_preview_msgs/: CMakeLists.txt  README.md  package.xml
src/utilities/nav2_preview_msgs/action/: __init__.py
src/utilities/nav2_recoveries/: CMakeLists.txt  package.xml  recovery_plugin.xml
tom06s/: host_sdk_sample.cpp  host_sdk_sample.h
(+96 files in other folders)
