<?xml version="1.0"?>
<package format="3">
  <name>odin_ros_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for Odin sensor</description>
  <maintainer email="oliveiratang@manifoldtech.cn">rlk</maintainer>
  <license>Apache 2.0</license>
  <!-- ROS2 uses colcon as the build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <!-- System dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <!-- Specify build type as ament -->
  <export>  
    <build_type>ament_cmake</build_type>  
  </export> 
</package>